Atualização ao swagger
